--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,3 +1,53 @@
-p, h1 {
-  color: white;
+.nav-bar-container {
+  margin-top: 1vw;
+  margin-right: 1vw;
+  margin-left: 1vw;
+  position: relative;
+}
+
+.logo-container {
+  width: 6vw;
+  height: 6vw;
+  position: absolute;
+}
+
+.logo {
+  width: inherit;
+  height: inherit;
+  cursor: pointer;
+}
+
+.links-auth {
+  position: absolute;
+  right: 1vw;
+  top: 1vw;
+}
+
+.nav-btn {
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+  border: 1px solid gray;
+  margin-top: 1vw;
+  padding: 0.5vw 0.7vw;
+  font-size: 1.3vw;
+  border-radius: 5px;
+  width: 5vw;
+  text-align: center;
+}
+
+.nav-btn:first-child, .nav-btn:nth-child(2) {
+  margin-right: 1vw;
+}
+
+#about-btn {
+  position: absolute;
+  color: inherit;
+  left: 10vw;
+  top: 1vw;
+  cursor: pointer;
+}
+
+#demo-login {
+
 }
