--- a/frontend/src/components/About/AboutPage.css
+++ b/frontend/src/components/About/AboutPage.css
@@ -1,3 +1,34 @@
-* {
-  color: white;
+.splash-container {
+  position: absolute;
+  top: 45vh;
+  left: 50%;
+}
+
+.image-container {
+  width: 25vw;
+  height: 25vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fadeInOut 5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+
+.splash-logo {
+  width: inherit;
 }
