--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -3,6 +3,7 @@
   margin-right: 1vw;
   margin-left: 1vw;
   position: relative;
+  color: inherit;
 }
 
 .logo-container {
@@ -21,6 +22,7 @@
   position: absolute;
   right: 1vw;
   top: 1vw;
+  color: inherit;
 }
 
 .nav-btn {
