--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -10,9 +10,10 @@
   width: 6vw;
   height: 6vw;
   position: absolute;
+  top: 0.65vw;
 }
 
-.logo {
+.main-pg-logo {
   width: inherit;
   height: inherit;
   cursor: pointer;
@@ -26,20 +27,62 @@
 }
 
 .nav-btn {
+  --c: #9DBEBB;
   text-decoration: none;
   color: inherit;
   display: inline-block;
-  border: 1px solid gray;
+  border: 1px solid var(--c);
   margin-top: 1vw;
   padding: 0.5vw 0.7vw;
   font-size: 1.3vw;
   border-radius: 5px;
   width: 5vw;
   text-align: center;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  word-spacing: 0.3em;
 }
 
 .nav-btn:first-child, .nav-btn:nth-child(2) {
   margin-right: 1vw;
+}
+
+.nav-btn span {
+  position: absolute;
+  width: 52%;
+  height: 100%;
+  background-color: var(--c);
+  transform: translateY(150%);
+  border-radius: 50%;
+  left: calc((var(--n) - 1) * 25%);
+  transition: 1s;
+  transition-delay: calc((var(--n) - 1) * 0.1s);
+  z-index: -1;
+}
+
+.nav-btn:hover, #about-btn:hover {
+  color: #031926;
+}
+
+.nav-btn:hover span {
+  transform: translateY(0) scale(2);
+}
+
+.nav-btn span:nth-child(1) {
+  --n: 3;
+}
+
+.nav-btn span:nth-child(2) {
+  --n: 2;
+}
+
+.nav-btn span:nth-child(3) {
+  --n: 6;
+}
+
+.nav-btn span:nth-child(4) {
+  --n: 1;
 }
 
 #about-btn {
@@ -47,9 +90,4 @@
   color: inherit;
   left: 10vw;
   top: 1vw;
-  cursor: pointer;
-}
-
-#demo-login {
-
 }
