creating offer done

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,5 +1,6 @@
 .nav-bar-container {
-  margin-top: 1vw;
+  /* background-color: #3498db; */
+  /* margin-top: .5vw; */
   margin-right: 1vw;
   margin-left: 1vw;
   position: relative;
