--- a/frontend/src/components/SessionForms/SignUpForm/signup.css
+++ b/frontend/src/components/SessionForms/SignUpForm/signup.css
@@ -1,6 +1,5 @@
 .session-form{
-    /* background-color: antiquewhite; */
-    /* height:100vh; */
+    background-color: antiquewhite;
     position: relative;
 }
 
@@ -24,7 +23,7 @@
 .sign-up-title{
     width: 39%;
     padding-bottom: 1rem;
-    /* padding-top: 5rem; */
+    padding-top: 3rem;
     /* background-color: aqua; */
     text-align: center;
     margin: auto;
@@ -94,7 +93,7 @@ input[type='password']:focus {
 .sign-in-title{
     width: 30%;
     padding-bottom: 1rem;
-    /* padding-top: 9rem; */
+    padding-top: 7rem;
     /* background-color: aqua; */
     text-align: center;
     margin: auto;
