--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -8,10 +8,10 @@
 }
 
 .logo-container {
-  width: 6vw;
-  height: 6vw;
+  width: 4vw;
+  height: 4vw;
   position: absolute;
-  top: 0.65vw;
+  top: 1.3vw;
 }
 
 .main-pg-logo,
@@ -248,6 +248,7 @@ textarea {
   transition: box-shadow 0.5s;
   max-width: 100%;
 }
+
 .custom-file-input {
   display: inline-block;
   padding: 8px 12px;
@@ -280,11 +281,16 @@ input[type="file"] {
   display: none;
 }
 
-
-
 .offerbox{
   background-color: #e0e0e0;
   width:100%;
   height: 7rem;
 
 }
+
+/* #selected-requests-btn,
+#selected-profile-btn,
+.selected-about-btn {
+  background-color: #9DBEBB;
+  color: #031926;
+} */
