--- a/frontend/src/components/LiveChat/LiveChat.css
+++ b/frontend/src/components/LiveChat/LiveChat.css
@@ -3,11 +3,11 @@
     max-width: 600px;
     margin: 10% auto;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #000000;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
     position: relative;
-    z-index: 1; 
+    z-index: 1;
   }
   .live-private-chat-messages {
     list-style-type: none;
@@ -24,14 +24,14 @@
     width: 85%;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
   }
   .live-private-chat-input-form button {
     padding: 10px 20px;
     border-radius: 5px;
     border: none;
     background-color: #007bff;
-    color: #fff;
+    color: #120505;
     cursor: pointer;
   }
   .live-private-chat-input-form button:hover {
