edit request is in progress, nav btn reflects the current page the user is on, filter is in progress

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -209,6 +209,11 @@
   }
 }
 
+.selected-nav-btn {
+  color: #031926 !important;
+  background-color: #9DBEBB;
+}
+
 .space{
   padding-bottom: 3rem;
 }
