--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -49,6 +49,8 @@
 .helper-btn {
   cursor: pointer;
   transition: background-color 1s;
+  border-radius: 10px;
+  padding-left: 1em;
 }
 
 .pg-requester-btn-gp,
@@ -64,7 +66,7 @@
 .pg-requester-resolved-status-btn,
 .helper-accepted-filter-btn,
 .helper-pending-filter-btn {
-  padding-left: 1em;
+  padding-left: 2em;
   margin-top: 1vw;
   border-radius: 5px;
   transition: background-color 1s;
@@ -86,6 +88,10 @@
   width: 100%;
   margin-top: 1vw;
   border-top: 1px dashed rgba(255, 255, 255, 0.8);
+}
+
+.selected-filter-btn {
+  background-color: #468189;
 }
 
 .pg-middle-section {
