--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -51,6 +51,8 @@
   transition: background-color 1s;
   border-radius: 10px;
   padding-left: 1em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 .pg-requester-btn-gp,
@@ -67,6 +69,8 @@
 .helper-accepted-filter-btn,
 .helper-pending-filter-btn {
   padding-left: 2em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   margin-top: 1vw;
   border-radius: 5px;
   transition: background-color 1s;
