--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -294,7 +294,7 @@ input[type="file"] {
 }
 
 .offerbox{
-  background-color: #F3E9CD;
+  /* background-color: #F3E9CD; */
   width:100%;
   height: 100vh;
   overflow:auto;
