--- a/frontend/src/components/LiveChat/LiveChat.css
+++ b/frontend/src/components/LiveChat/LiveChat.css
@@ -31,6 +31,8 @@
 
 .chat-user {
   margin-bottom: 1em;
+  position: relative;
+  left: 41vw;
 }
 
 .scrollable-chat {
@@ -38,7 +40,7 @@
   color: #031926;
   font-size: 1.5vw;
   font-weight: 100;
-  height: 23.65vw;
+  height: 46vh;
   /* grid-gap: 0.6rem; */
   margin-bottom: 1vh;
 }
