--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -37,10 +37,24 @@ box-shadow: 0px 0px 50px #F4E9CD;
     font-size: x-large;
 }
 .accepted-offers{
+    margin: auto;
     margin-top: 5rem;
+
+    width: 50%;
 }
 .center{
     align-items: center;
     text-align: center;
     align-content: center;
+}
+.review{
+/* background-color: #9DBEBB; */
+padding: .5rem;
+border:3px solid black;
+/* background-color: whitesmoke; */
+}
+.req{
+    font-size: xx-large;
+    cursor: pointer;
+    color: #9DBEBB;
 }
