--- a/frontend/src/components/LiveChat/LiveChat.css
+++ b/frontend/src/components/LiveChat/LiveChat.css
@@ -31,6 +31,7 @@
 
 .chat-user {
   margin-bottom: 1em;
+  margin-left: 88%;
 }
 
 .scrollable-chat {
@@ -38,9 +39,10 @@
   color: #031926;
   font-size: 1.5vw;
   font-weight: 100;
-  height: 46vh;
+  height: 49vh;
   /* grid-gap: 0.6rem; */
   margin-bottom: 1vh;
+  border-top: 2px solid #999;
 }
 
 .chat {
@@ -59,6 +61,9 @@
   margin-bottom: 1em;
   word-wrap: break-word;
   text-align: center;
+  border: 2px solid #031926;
+  border-radius: 20px;
+  padding: 0.5em;
 }
 
 .sent {
