--- a/frontend/src/components/About/AboutPage.css
+++ b/frontend/src/components/About/AboutPage.css
@@ -1,3 +1,7 @@
+.about-page-container {
+  position: relative;
+}
+
 .splash-container {
   position: absolute;
   top: 45vh;
@@ -31,4 +35,71 @@
 
 .splash-logo {
   width: inherit;
+}
+
+/* .app-description { */
+  /* font-size: 5vw;
+  width: 30vw;
+  position: absolute;
+  top: 15%;
+  left: 35%;
+  animation: fadeIn 5s;
+  animation-delay: 5s;
+  /* display: none; */
+  /* transform: translate(-50%, -50%); */
+/* } */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.team-members-info {
+  position: absolute;
+  visibility: hidden;
+  top: 17vw;
+  left: 5%;
+  animation: fadeIn ease 5s;
+  animation-iteration-count: 1;
+  animation-delay: 5s;
+  animation-fill-mode: forwards;
+}
+
+.member-box {
+  display: grid;
+  width: inherit;
+  grid-template-columns: auto auto auto auto;
+  column-gap: 29%;
+  /* text-align: center; */
+  letter-spacing: 0.1em;
+}
+
+.member-name {
+  font-size: 1.7vw;
+  text-align: center;
+}
+
+.member-pos {
+  text-align: center;
+}
+
+.member-avatar {
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.member-avatar:hover {
+  border: 5px solid #fff;
+  box-shadow: 0px 0px 10px #fff;
+}
+
+.member-avatar:hover {
+  color: #fff;
+  text-shadow: 0px 0px 3px #fff;
 }
