--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -1,60 +1,84 @@
-.offer-container{
-/* background-color: aliceblue; */
-width: 100%;
-/* height: 17rem; */
-/* border-radius: 50%; */
-box-shadow: 0px 0px 50px #F4E9CD;
-margin: 1rem;
-/* margin-bottom: 2rem; */
-/* margin-right: -3rem; */
+.offer-container {
+  /* background-color: aliceblue; */
+  /* height: 17rem; */
+  /* border-radius: 50%; */
+  /* box-shadow: 0px 0px 50px #F4E9CD; */
+  margin: 1rem;
+  /* margin-bottom: 2rem; */
+  /* margin-right: -3rem; */
+  letter-spacing: 0.05em;
+}
 
+.offer-box {
+  border: 2px solid #acbbb9;
+  margin-bottom: 2em;
+  border-radius: 10px;
+  background-color: #1c2d39;
+}
 
-}
-.req-offer-container{
-    background-color: #9DBEBB;
-    /* margin-top: 3rem; */
-    padding-top: 3rem;
-    /* color:#031926; */
-    
-  overflow:auto;
+.req-offer-container {
+  background-color: #9dbebb;
+  /* margin-top: 3rem; */
+  padding-top: 3rem;
+  /* color:#031926; */
 
+  overflow: auto;
 }
-.bigger{
-    /* padding: .5rem; */
-    font-size: xx-large;
-box-shadow: 0px 0px 50px #F4E9CD;
 
+.bigger {
+  /* padding: .5rem; */
+  font-size: xx-large;
+  /* box-shadow: 0px 0px 50px #F4E9CD; */
 }
-.green{
-    color: green;
-}
-.pad{
-    margin: 1rem;
-    /* background-color:#9DBEBB ; */
-}
-.close{
-    /* color:red; */
-    font-size: x-large;
-}
-.accepted-offers{
-    margin: auto;
-    margin-top: 5rem;
 
-    width: 50%;
+.green {
+  color: green;
 }
-.center{
-    align-items: center;
-    text-align: center;
-    align-content: center;
+
+.pad {
+  margin: 1rem;
+  /* background-color:#9DBEBB ; */
 }
-.review{
-/* background-color: #9DBEBB; */
-padding: .5rem;
-border:3px solid black;
-/* background-color: whitesmoke; */
+
+.close {
+  /* color:red; */
+  font-size: x-large;
 }
-.req{
-    font-size: xx-large;
-    cursor: pointer;
-    color: #9DBEBB;
+
+.accepted-offers {
+  margin: auto;
+  margin-top: 5rem;
+
+  width: 50%;
+}
+
+.center {
+  align-items: center;
+  text-align: center;
+  align-content: center;
+}
+
+.review {
+  /* background-color: #9DBEBB; */
+  padding: 0.5rem;
+  border: 2px solid #60968f;
+  background-color: #95b1af;
+  border-radius: 10px;
+  color: #031926;
+  margin: 1em;
+  font-size: 1.2vw;
+  /* background-color: whitesmoke; */
+}
+
+.req {
+  font-size: xx-large;
+  cursor: pointer;
+  color: #9dbebb;
+}
+
+.accepted-offers-fab {
+  font-size: 3em;
+  position: fixed;
+  left: 67vw;
+  bottom: 10vw;
 }
