--- a/frontend/src/components/About/AboutPage.css
+++ b/frontend/src/components/About/AboutPage.css
@@ -37,17 +37,37 @@
   width: inherit;
 }
 
-/* .app-description { */
-  /* font-size: 5vw;
-  width: 30vw;
+.app-description-container {
+  font-size: 1.8vw;
+  width: 80vw;
   position: absolute;
-  top: 15%;
-  left: 35%;
-  animation: fadeIn 5s;
+  top: 10vw;
+  left: 10%;
+  letter-spacing: 0.06em;
+  word-spacing: 0.3em;
+  line-height: 1.3em;
+  text-align: justify;
+  visibility: hidden;
+}
+
+.app-description {
+  text-indent: 50px;
+}
+
+.team-members-info {
+  position: absolute;
+  visibility: hidden;
+  top: 24vw;
+  left: 5%;
+}
+
+.app-description,
+.team-members-info {
+  animation: fadeIn ease 5s;
+  animation-iteration-count: 1;
   animation-delay: 5s;
-  /* display: none; */
-  /* transform: translate(-50%, -50%); */
-/* } */
+  animation-fill-mode: forwards;
+}
 
 @keyframes fadeIn {
   from {
@@ -60,23 +80,11 @@
   }
 }
 
-.team-members-info {
-  position: absolute;
-  visibility: hidden;
-  top: 17vw;
-  left: 5%;
-  animation: fadeIn ease 5s;
-  animation-iteration-count: 1;
-  animation-delay: 5s;
-  animation-fill-mode: forwards;
-}
-
 .member-box {
   display: grid;
   width: inherit;
   grid-template-columns: auto auto auto auto;
   column-gap: 29%;
-  /* text-align: center; */
   letter-spacing: 0.1em;
 }
 
@@ -102,4 +110,34 @@
 .member-avatar:hover {
   color: #fff;
   text-shadow: 0px 0px 3px #fff;
+}
+
+.source-code-btn {
+  position: absolute;
+  left: 46%;
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5em 0.8em;
+  font-size: 1vw;
+  border-radius: 5px;
+  border: 1px solid #9DBEBB;
+  transition: color 1s;
+  transition: background-color 1s;
+}
+
+.source-code-btn:hover {
+  background-color: #9DBEBB;
+  color: #031926;
+}
+
+@media screen and (width <= 1440px) {
+  .source-code-btn {
+    bottom: -50vw;
+  }
+}
+
+@media screen and (width > 1440px) {
+  .source-code-btn {
+    bottom: -46vw;
+  }
 }
