minor updates on search result and chat history div

--- a/frontend/src/components/LiveChat/LiveChat.css
+++ b/frontend/src/components/LiveChat/LiveChat.css
@@ -149,11 +149,11 @@
 }
 
 /* Public chat styling */
-.public-chat-msg {
+/* .public-chat-msg {
   font-size: 1.3vw;
   background-color:rgba(192, 192, 192, 0.8);
   margin-bottom: 0.5em;
   border-radius: 5px;
   padding: 0.3em 0.6em;
   width: fit-content;
-}
+} */
